Generate Hamiltonians using SphericalOperators.jl

--- a/Project.toml
+++ b/Project.toml
@@ -10,4 +10,4 @@ FEDVR = "7f64dc6e-ccd1-5a31-8826-1dc29b280c7c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
-WignerSymbols = "9f57e263-0b3d-5e2e-b1be-24f2bb48858b"
+SphericalOperators = "0740b0f4-c400-11e8-2cb9-2f360bf4d2ec"
