--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ BSplines = "8759ff0c-cd99-11e8-1c1c-d94a817e6fcc"
 BandedMatrices = "aae01518-5342-5314-be14-df237901396f"
 BlockMaps = "d8394ddc-3346-5325-9a2b-8a6d3660a8c1"
 FEDVR = "7f64dc6e-ccd1-5a31-8826-1dc29b280c7c"
+FiniteDifferences = "05ffbe36-db6d-11e8-0580-4b496c61a72d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
