--- a/Project.toml
+++ b/Project.toml
@@ -11,5 +11,6 @@ FEDVR = "7f64dc6e-ccd1-5a31-8826-1dc29b280c7c"
 FiniteDifferences = "05ffbe36-db6d-11e8-0580-4b496c61a72d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SphericalOperators = "0740b0f4-c400-11e8-2cb9-2f360bf4d2ec"
